<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="top|center"
        android:text="@string/dummy_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:text="campusid"
        android:id="@+id/textLogin"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/labelLogin"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/buttonConnect"
        android:layout_below="@+id/textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:gravity="center"
        android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:paddingTop="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login"
        android:id="@+id/labelLogin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textLogin"
        android:text="@string/password"
        android:id="@+id/labelPassword"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="campusid"
        android:ems="10"
        android:id="@+id/textPassword"
        android:layout_below="@+id/labelPassword"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom" />

</RelativeLayout>
